--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
 html {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
   overscroll-behavior: none;
 }
 body {
@@ -15,6 +11,7 @@ body {
   text-rendering: geometricPrecision;
   transition: background-color 0.6s;
   height: 100%;
+  margin: 0;
   overscroll-behavior: none;
 }
 body[path='index.html'] {
@@ -22,6 +19,9 @@ body[path='index.html'] {
 }
 body[path='archives/index.html'] .logopng {
   display: none;
+}
+body[path='archives/index.html'] .logot {
+  margin-top: 10px;
 }
 body[path='archives/index.html'] .more {
   display: none;
@@ -156,8 +156,8 @@ hr {
 }
 .posts .post-title {
   text-align: center;
-  font-size: 24px;
-  line-height: 40px;
+  font-size: 22px;
+  line-height: 1.2;
   margin-bottom: 10px;
 }
 .posts .outdated-notify {
@@ -175,8 +175,8 @@ hr {
   position: relative;
   background: #21252b;
   border-radius: 5px;
-  font: 15px/22px "Microsoft YaHei", "Arial", Sans-Serif;
-  line-height: 1.6;
+  font: 14px/22px 'Microsoft YaHei', 'Arial', Sans-Serif;
+  line-height: 1.4;
   max-width: 800px;
   max-height: 500px;
   margin: 0 auto;
@@ -190,7 +190,7 @@ hr {
   box-shadow: 0 10px 30px 0px rgba(0,0,0,0.4);
 }
 .posts .post-content pre:before {
-  content: " ";
+  content: ' ';
   position: absolute;
   border-radius: 50%;
   background: #fc625d;
@@ -241,6 +241,12 @@ hr {
 .posts .highlight .code .hljs {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
+}
+@media screen and (max-width: 800px) {
+  .posts .outdated-notify {
+    font-size: 12px;
+    margin: 10px 0;
+  }
 }
 .post-content .octicon {
   display: inline-block;
@@ -295,9 +301,8 @@ hr {
 .post-content {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  line-height: 1.5;
   font-family: 'Zpix', -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.5;
   word-wrap: break-word;
   letter-spacing: 1px;
@@ -1364,8 +1369,11 @@ label.el-checkbox {
 }
 @media screen and (max-width: 800px) {
   .hd {
-    width: 96%;
+    width: 95%;
     margin: auto;
+  }
+  .logodiv {
+    margin-top: 20px;
   }
   .posts .replay-btn {
     display: none;
@@ -1377,6 +1385,7 @@ label.el-checkbox {
     font-size: 16px;
   }
   .postname {
+    max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -1385,5 +1394,8 @@ label.el-checkbox {
     right: -20px;
     top: 40px;
     transform: scale(0.6);
+  }
+  footer {
+    font-size: 12px;
   }
 }
