deploy: 950c031ec3eb17ad67913b3a426e5b996fbace31

--- a/css/style.css
+++ b/css/style.css
@@ -1430,9 +1430,13 @@ label.el-checkbox {
   bottom: -0.3rem;
   z-index: 1;
   transition: transform 0.3s;
+  cursor: grab;
 }
 #pio-container:hover {
   transform: translateY(-0.3rem);
+}
+#pio-container:active {
+  cursor: grabbing;
 }
 #pio {
   height: 15rem;
